--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h1{
 
 .link a{
     text-decoration: none;
-    color: #fff;
+    color: #ffff;
     opacity: .6;
     transition: opacity .3s ease;
 }
